# battleship

./: .clang-format  .deepsource.toml  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  board.c  board.h  format1.txt  format3.txt  format4.txt  format5.txt  game.h  main  main.c  main.h  renovate.json  ship.c  ship.h  tile.c  tile.h  types.h
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/workflows/: codeql.yml  make.yml  pre-release.yml  release.yml  test.yml
server/: Cargo.toml
server/src/: main.rs  server.rs  types.rs
src/: board.c  board.h  const.h  error.c  game.c  game.h  helpers.c  helpers.h  hmap.c  hmap.h  main.c  main.h  parser.c  parser.h  ship.c  ship.h  stdprof.c  stdprof.h  tile.c  tile.h  types.h
src/ai/: common.c  common.h  hunt_target.c  hunt_target.h  probability_targeting.c  probability_targeting.h  random_ai.c  random_ai.h
src/core/: benchmark.c  benchmark.h  interactive.c  interactive.h  parser.c  parser.h
src/game/: board.c  board.h  game.c  game.h  ship.c  ship.h  tile.c  tile.h
src/multiplayer/: socket.c  socket.h
src/utils/: colors.h  const.h  error.c  error.h  helpers.c  helpers.h  hmap.c  hmap.h  random.c  random.h  stdprof.c  stdprof.h  types.h  version.h
test/: format0.txt  format2.txt
