[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-std", "io-util", "net", "sync", "macros", "rt", "rt-multi-thread"] }
env_logger = "0.10"
log = "0.4"
rand = "0.8"